@@ -118,6 +118,7 @@ Zachary West
 Jay Weatherstone
 Robby Weinberg
 Ofri Wolfus
+Marco Zehe
 Albert Zeyer
 
 If you have contributed to Adium and are not on this list, please contact us.
